--- a/_posts/2024-09-04-SF.md
+++ b/_posts/2024-09-04-SF.md
@@ -12,15 +12,45 @@ images:
 ---
 Earlier this year I was fortunate enough to be accepted as an OpenSauce 2024 Exhibitor :)
 While I was there I got to check out some other fun spots, like Oakland's Counter Culture Labs, Mission District's noisebridge hackerspace, and Greg Leyh's LOD Labs
-
+        
 ## Misc
 <swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" rewind="true">
-  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/Gallery/flightin.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
-  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/Gallery/SFarrival.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
-  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/Gallery/beautifulwoman.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
-  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/Gallery/AIDsmemorial.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
-  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/Gallery/BridgeSFmoMA.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
-  <swiper-slide>{% include figure.liquid loading="eager" path="assets/img/Gallery/beautyineverybreathe.jpg" class="img-fluid rounded z-depth-1" %}</swiper-slide>
+  <swiper-slide>
+    <figure class="figure">
+      {% include figure.liquid loading="eager" path="assets/img/Gallery/flightin.jpg" class="img-fluid rounded z-depth-1" %}
+    <figcaption class="figure-caption">Flight Into SF</figcaption>
+    </figure>
+  </swiper-slide>
+  <swiper-slide>
+    <figure class="figure">  
+      {% include figure.liquid loading="eager" path="assets/img/Gallery/SFarrival.jpg" class="img-fluid rounded z-depth-1" %}
+    <figcaption class="figure-caption">SF Arrival</figcaption>
+    </figure>
+  </swiper-slide>
+  <swiper-slide>
+    <figure class="figure">
+      {% include figure.liquid loading="eager" path="assets/img/Gallery/beautifulwoman.jpg" class="img-fluid rounded z-depth-1" %}
+    <figcaption class="figure-caption">Flight Into SF</figcaption>
+    </figure>
+  </swiper-slide>
+  <swiper-slide>
+    <figure class="figure">
+      {% include figure.liquid loading="eager" path="assets/img/Gallery/AIDsmemorial.jpg" class="img-fluid rounded z-depth-1" %}
+    <figcaption class="figure-caption">Flight Into SF</figcaption>
+    </figure>
+  </swiper-slide>
+  <swiper-slide>
+    <figure class="figure">
+      {% include figure.liquid loading="eager" path="assets/img/Gallery/BridgeSFmoMA.jpg" class="img-fluid rounded z-depth-1" %}
+    <figcaption class="figure-caption">Flight Into SF</figcaption>
+    </figure>
+  </swiper-slide>
+  <swiper-slide>
+    <figure class="figure">
+      {% include figure.liquid loading="eager" path="assets/img/Gallery/beautyineverybreathe.jpg" class="img-fluid rounded z-depth-1" %}
+    <figcaption class="figure-caption">example</figcaption>
+    </figure>
+  </swiper-slide>
 </swiper-container>
 
 ## Noise Bridge
