--- a/_posts/2025-04-29-post3.md
+++ b/_posts/2025-04-29-post3.md
@@ -105,3 +105,6 @@ module Mainboard:
 ```
 
 ![Hab Block Diagram](/assets/img/Gallery/HABBlockDiagram.png)
+
+![Hab PCB (top)](/assets/img/Gallery/HABPCBtop.jpg)
+![Hab PCB (bottom)](/assets/img/Gallery/HABPCBbottom.jpg)
