--- a/_eigenlucy/2025-10-17-lasvegas.md
+++ b/_eigenlucy/2025-10-17-lasvegas.md
@@ -7,8 +7,8 @@ description: "Las Vegas, The Crater of Desire"
 permalink: /eigenlucy/lasvegas/
 ---
 
-Written October 16th, 2025
-Experienced September 19th, 2025
+# Written October 16th, 2025
+# Experienced September 19th, 2025
 
 <div>
   <img src="/assets/img/Gallery/BaconVegas.jpg" alt="Francis Bacon, Fragment of a Cruxifiction" style="width: 50%; height: auto; display: block; margin-left: auto; margin-right: auto;">
