--- a/_eigenlucy/2025-12-29-iemanja.md
+++ b/_eigenlucy/2025-12-29-iemanja.md
@@ -7,4 +7,6 @@ description: "Only as a picture, which flashes its farewell in the moment of it'
 permalink: /eigenlucy/iemanja/
 ---
 
+Memory is like a pool you can swim through, but it’s also like a tool that you wield. It is both active and passive. Each flash ruptures the stasis of self evident experience as it brushes a trace past in the present. It is a strange unfamiliar past, or maybe the now is a strange unfamiliar place. The violent struggle between these two postulates calls forwards a new being capable of integrating the difference. Memory doesn’t simply recall the past, it summons it. There is no pure memory nor past to recover, only affections. The hope and prayer of all who hope to honor memory is that these craters of experience may be channeled to the construction a self worthy of everything that happens to it, able to speak to it all. I hope that one day I can find the words. I am so tired.
 
+[Iemanja (Ode To Vera)](https://open.spotify.com/playlist/6RxBksPjPwYYKLjTdvzFxo?si=51803b0107514b97)
