typos and dates

--- a/_posts/2024-09-04-SF.md
+++ b/_posts/2024-09-04-SF.md
@@ -12,6 +12,8 @@ images:
 ---
 Earlier this year I was fortunate enough to be accepted as an OpenSauce 2024 Exhibitor :)
 While I was there I got to check out some other fun spots, like Oakland's Counter Culture Labs, Mission District's noisebridge hackerspace, and Greg Leyh's LOD Labs
+
+<!--more-->
         
 ## Misc
 <swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" rewind="true">
