--- a/_posts/2025-01-21-SF.md
+++ b/_posts/2025-01-21-SF.md
@@ -11,6 +11,8 @@ images:
   slider: true
 ---
 
+<!--more-->
+
 <swiper-container keyboard="true" navigation="true" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" rewind="true">
   <swiper-slide>
     <figure class="figure">
