--- a/_eigenlucy/2025-12-29-kaddish.md
+++ b/_eigenlucy/2025-12-29-kaddish.md
@@ -46,3 +46,8 @@ There are a few remarkable claims in this early fragment of Scholem's:
 * 3: Scholem has Stirner reciting the Kaddish over God. This is the most perplexing choice he could have made from the authors listed. I see the vision. "The Unique One is substance driven to it's greatet degree of abstraction". Scholem seems to anticipate that the ghosts in the machine to which Stirner first gave an voice of their own would be the means to escape the systematic murder of God by the very form of logic that once guaranteed his transcendence.
 
 "Nothing Human Is Alien to Me" (taken at the summit above Bascilica de Guadelupe in Mexico City)
+<div class="row">
+    <div class="col-sm mt-2 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/Gallery/angelCDMX.jpg" title="angel" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
